# oxicode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  MIGRATION.md  README.md  TODO.md
benches/: comparison_bench.rs  decoding_bench.rs  encoding_bench.rs
compatibility/: Cargo.toml
compatibility/src/: lib.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: basic_usage.rs  configuration.rs  simd_arrays.rs  validation.rs  zero_copy.rs
src/: config.rs  decode.rs  encode.rs  error.rs  lib.rs  utils.rs
src/compression/: lz4.rs  mod.rs  zstd_impl.rs
src/de/: decoder.rs  impl_tuples.rs  impls.rs  mod.rs  read.rs
src/enc/: encoder.rs  impl_tuples.rs  impls.rs  mod.rs  write.rs
src/features/: impl_alloc.rs  impl_atomic.rs  impl_std.rs  mod.rs
src/features/serde/: compat.rs  de.rs  mod.rs  ser.rs
src/flat/: decoder.rs
src/simd/: aligned.rs  array.rs  detect.rs  mod.rs
src/streaming/: async_io.rs  chunk.rs  decoder.rs  encoder.rs  mod.rs
src/validation/: constraints.rs  mod.rs  validator.rs
src/varint/: decode_signed.rs  decode_unsigned.rs  encode_signed.rs  encode_unsigned.rs  mod.rs
src/versioning/: compatibility.rs  header.rs  mod.rs  version.rs
tests/: async_advanced39_test.rs  borrow_decode_test.rs  collections_test.rs  compression_test.rs  compression_zstd_advanced19_test.rs  derive_test.rs  file_io_advanced14_test.rs  file_io_advanced16_test.rs  primitive_types.rs  serde_owned_test.rs  special_types_test.rs  versioning_test.rs
