[workspace]
members = ["derive", "compatibility"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["OxiCode Contributors"]
edition = "2021"
rust-version = "1.85.0"
repository = "https://github.com/cool-japan/oxicode"
license = "MIT"
description = "A modern binary serialization library - successor to bincode"

[workspace.dependencies]
# Proc macro dependencies
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# Core dependencies
serde = { version = "1.0", default-features = false }

# Dev dependencies
criterion = "0.8.1"
tempfile = "3.24"
serde_json = { version = "1.0", default-features = false }

[package]
name = "oxicode"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
rust-version.workspace = true

keywords = ["binary", "encode", "serialize", "bincode", "serialization"]
categories = ["encoding", "network-programming"]

publish = true

[features]
default = ["std", "derive"]
std = ["alloc", "serde?/std"]
alloc = ["serde?/alloc"]
derive = ["oxicode_derive"]
serde = ["dep:serde", "alloc"]  # Serde integration (optional)
simd = []  # SIMD-optimized array encoding (auto-detects CPU capabilities)
compression-lz4 = ["lz4_flex"]  # LZ4 compression (fast, default)
compression-zstd = ["zstd"]    # Zstd compression (better ratio)
compression = ["compression-lz4"]  # Default compression feature
async-tokio = ["tokio"]  # Async streaming with tokio
async-io = ["futures-io"]  # Generic async IO traits

[dependencies]
oxicode_derive = { path = "derive", version = "0.1.0", optional = true }
serde = { workspace = true, optional = true, features = ["alloc"] }
lz4_flex = { version = "0.12", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }
tokio = { version = "1.48", features = ["io-util"], optional = true }
futures-io = { version = "0.3", optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
bincode = "2.0" # Never upgrade to 3.0
tokio = { version = "1.48", features = ["rt", "macros", "io-util"] }

[[bench]]
name = "encoding_bench"
harness = false

[[bench]]
name = "decoding_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
