[package]
name = "oxicode_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Derive macros for oxicode"
readme = "README.md"
keywords = ["binary", "encode", "decode", "derive", "macro"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]

publish = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
